discussion/kv_engine/170266/170266_rev42_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: FollyExecutorPool use custom queue for actual work

This is implemented by interposing our own queue of work underneath
the queue in the cpuPool to allow us to remove tasks from the queue
when we unregister a taskable (which will be done in a following
change). Now, when we schedule a task we enqueue it in a queue in a
custom executor and schedule a task on the base executor to pop a
task from the queue and run it.

Change-Id: Idcbf1737b80c3d3b92ed62adb3d4d164a2cf4266

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-16 18:35:43.000000000
Message: 
Uploaded patch set 42.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-16 19:06:25.000000000
Message: 
Patch Set 42: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15666/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/custom_folly_cpu_thread_pool_executor.h:101:13: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
            Expects(task);
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15666/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/custom_folly_cpu_thread_pool_executor.h:101:13:
error: use of undeclared identifier "Expects" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15666/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43998/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [59/159]: ep max workload stats...(39 ms) OK


99% tests passed, 4 tests failed out of 422

Total Test time (real) = 675.32 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43998/ )

Failure of GoogleTest "AllBucketTypes/PassiveDurabilityMonitorTest.dropFirstKeyAndCompleteNextDiskSnap/persistent_couchstore_value_only":

<pre>
[ RUN      ] AllBucketTypes/PassiveDurabilityMonitorTest.dropFirstKeyAndCompleteNextDiskSnap/persistent_couchstore_value_only
unknown file: error: C++ exception with description "KVStoreFactory ctor: Specified dbname "ep_engine_ep_unit_tests.db/test.532203" is not a directory" thrown in SetUp().
unknown file: error: SEH exception with code 0xc0000005 thrown in TearDown().
[  FAILED  ] AllBucketTypes/PassiveDurabilityMonitorTest.dropFirstKeyAndCompleteNextDiskSnap/persistent_couchstore_value_only, where GetParam() = ("persistent_couchstore", "value_only") (4 ms)
AllBucketTypes/PassiveDurabilityMonitorTest.dropFirstKeyAndCompleteNextDiskSnap/persistent_couchstore_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43998/ )

Timeout of a CTest test 420/422 Test #288: ep_testsuite_dcp.value_eviction.comp_active ...................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43998/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18456/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14513/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37092/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16483/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5314/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17420/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17738/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25821/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5375/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
